--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 node_modules
+dist
 npm-debug.log
 Dockerfile
 .dockerignore
@@ -6,7 +7,7 @@ docker-compose.yml
 *.md
 .git
 .gitignore
-.env
+*.env
 .vscode
 config
 build
